<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/black"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/title_play"
            android:textColor="@color/textColorDefault"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_Back"
            android:layout_width="@dimen/button_small"
            android:layout_height="@dimen/button_small"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:background="@drawable/back" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_toolbar"
        android:text="@string/player_desc"
        android:textAlignment="center"
        android:textColor="@color/textColorDefault" />

    <TextView
        android:id="@+id/textView_Playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_Desc"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/play_track"
        android:textColor="@color/textColorDefault"
        android:textSize="@dimen/text_size_med"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_music"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_centerInParent="true"
        android:src="@drawable/music" />

    <LinearLayout
        android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/black"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/control_size"
            android:layout_height="@dimen/control_size"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/play_button" />

        <ImageView
            android:layout_width="@dimen/control_size"
            android:layout_height="@dimen/control_size"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/pause_button" />

        <ImageView
            android:layout_width="@dimen/control_size"
            android:layout_height="@dimen/control_size"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/stop_button" />

        <Button
            android:id="@+id/button_Buy"
            android:layout_width="@dimen/control_size"
            android:layout_height="@dimen/control_size"
            android:background="@drawable/buy_bg"
            android:text="@string/button_buy"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView_Cost"
            android:layout_width="@dimen/control_size"
            android:layout_height="@dimen/control_size"
            android:text="@string/cost"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>