<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textColorDefault"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_default"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/layout_Albums"
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_height"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/img1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_albums"
                    android:textColor="@color/textColorDefault"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Artists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_height"
                android:layout_below="@id/layout_Albums"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/img2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_artists"
                    android:textColor="@color/textColorDefault"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Genre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_height"
                android:layout_below="@id/layout_Artists"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/img3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_genre"
                    android:textColor="@color/textColorDefault"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Tracks"
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_height"
                android:layout_below="@id/layout_Genre"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/img4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_tracks"
                    android:textColor="@color/textColorDefault"
                    android:textSize="@dimen/text_size_med" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>